fixed alignment for bloggers

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
-.col-xs-3{
-    background-color: #E8E8EE;   
+.col-md-4{
+    background-color: #E8E8EE;
+
 }
 @media (min-width: 768px) {
   .navbar-collapse {
@@ -44,29 +45,35 @@
     height: auto;
 }
 
-/*Styles for left side navbar*/
-/*
-.navbar-fixed-left {
-  width: 140px;
-  position: fixed;
-  border-radius: 0;
-  height: 100%;
+@media only screen and (min-width : 320px) {
+  .container, .container-fluid {
+    padding-left: 100px; 
+  }
 }
 
-.navbar-fixed-left .navbar-nav > li {
-  float: none;  /* Cancel default li float: left */
-  width: 139px;
+@media only screen and (min-width : 480px) {
+  .container, .container-fluid {
+    padding-left: 100px; 
+  }
 }
 
-.navbar-fixed-left + .container {
-  padding-left: 160px;
+@media only screen and (min-width : 768px) {
+  .container, .container-fluid {
+    padding-left: 100px; 
+  }
 }
 
-/* On using dropdown menu (To right shift popuped) */
-/*
-.navbar-fixed-left .navbar-nav > li > .dropdown-menu {
-  margin-top: -50px;
-  margin-left: 140px;
+@media only screen and (min-width : 992px) {
+  .container, .container-fluid {
+    padding-left: 100px; 
+  }
 }
-*/
+
+@media only screen and (min-width : 1200px) {
+  .container, .container-fluid {
+    padding-left: 100px; 
+  }
+}
+
+
 
